app/assets/stylesheets/style.css
html {overflow-x: hidden;} /* this prevents horizontal scrolling */
body {
	color: darkcyan !important;
	overflow:hidden;
    width:100%;
    -webkit-box-sizing: border-box;
       -moz-box-sizing: border-box;
            box-sizing: border-box;

}



/* mobile version */
@media screen and (max-width:500px) {
	body {
		margin: 0 !important;
		width:100vw;
	}

	h1,h2,h3,h4,h5,h6 {
		text-align: center;
		margin:5vw !important;
		font-family: helvetica;
	}

	p {
		margin: 5vw !important;
		text-align: justify;
		font-family: century;
	}
	

}



/* desktop version */
@media screen and (min-width: 500px) {
	
	h1,h2,h3,h4,h5,h6, p {
		text-align:center;
		max-width:80vw;
		display:block;
		margin: 0 auto !important;
	}
	h1,h2,h3,h4,h5,h6 {font-family: helvetica;}
	p {font-family:century;}


	.bg-image {
		width: 100%;
		background-size:100%;
	}



	/* pdfs */
	.pdf-view {
		width:100%; 
		height:100vh;
	}


	.page > section {padding:5em 0 5em 0;}



	/*section blocks */
	.section-block {
		padding: 3vw 0 3vw 0;
		clear:both;
	}
	.section-block img{
		max-width: 100%;
	}

		.work-sample img {
			width: 10vw;
		}







}

